Fixes for picking dates on mobile.
Don't close the form if you click anywhere on the calendar.

Don't show the forward/back buttons.  They're too small to really click
on.

--- a/events/scss/events.scss
+++ b/events/scss/events.scss
@@ -404,3 +404,9 @@ form.space-use-request {
     border-radius: 5px;
     border-color: $gray;
 }
+
+@include small-screen {
+    .pika-prev, .pika-next {
+        display: none;
+    }
+}
